First working version

--- a/GeoQuiz.csproj
+++ b/GeoQuiz.csproj
@@ -81,6 +81,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\OK.png" />
+    <None Include="Resources\NOT_OK.png" />
+    <None Include="Resources\OK_not_OK.png" />
     <None Include="Resources\ApiKey.txt" />
     <None Include="Resources\ApiKeyRENAMETHIS.txt" />
     <Content Include="Resources\countries.txt" />
